# ghc-perf-import

./: .gitignore  .gitmodules  ImportGit.hs  ImportHeadHackage.hs  ImportNotes.hs  MRX.hs  Main.hs  README.mkd  SummarizeResults.hs  TestsuiteResults.hs  Types.hs  Utils.hs  perf-import.cabal  plot.ipynb  plot.py  schema.sql  web.nix
gitlab-bot/: default.nix  nixos.nix  package.nix  setup.py
gitlab-bot/ghc_perf_import_service/: __init__.py
gitlab-bot/gitlab_webhook/: __init__.py
import/: GitLabHook.hs  HookMain.hs  ImportGit.hs  ImportHeadHackage.hs  ImportNofib.hs  ImportNotes.hs  SummarizeResults.hs  TestsuiteResults.hs  default.nix  perf-import.cabal  schema.sql
import-python/: ghc_perf_db.py  import-head-hackage-2.py  import-head-hackage.py  import-perf.py  import-simple-perf.py  pyproject.toml
import/src/GhcPerf/Import/: HeadHackage.hs  Notes.hs  Types.hs  Utils.hs
import/src/GhcPerf/Import/HeadHackage/: MRX.hs
nixos/: default.nix  ghc-perf.nix
nixos/postgrest/: aeson.nix  configurator-pg.nix  default.nix  hasql-pool.nix  hasql-transaction.nix  hasql.nix  postgrest.nix
web/: Makefile  default.nix  ghc_perf.css  ghc_perf.js  index.html  node-packages.nix  package.json  spinner.css
web-miso/: Completer.hs  Db.hs  Main.hs  app.nix  cabal.project  default.nix  index.html  style.css  web-miso.cabal
