name:                perf-import
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2016 Ben Gamari
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable perf-import
  main-is:             Main.hs
  other-modules:       SummarizeResults, Slurp, Types
  other-extensions:    QuasiQuotes, RecordWildCards
  build-depends:       base >=4.8 && <4.10,
                       postgresql-simple >=0.5 && <0.6,
                       containers >=0.5 && <0.6, dlist >=0.7 && <0.8,
                       regex-compat >= 0.95,
                       filepath >= 1.4,
                       optparse-applicative >= 0.12,
                       transformers >=0.5 && <0.6
  hs-source-dirs:      ., nofib/nofib-analyse
  default-language:    Haskell2010

executable perf-import-git
  main-is:             ImportGit.hs
  other-modules:       Types
  build-depends:       base >= 4.8 && <4.10,
                       containers >= 0.5,
                       postgresql-simple >= 0.5,
                       time >= 1.6,
                       process >= 1.4