name:                perf-import
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2016 Ben Gamari
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable perf-import
  main-is:             Main.hs
  other-modules:       SummarizeResults, Slurp, Types, TestsuiteResults, Utils
  other-extensions:    QuasiQuotes, RecordWildCards
  build-depends:       base >=4.8 && <4.14,
                       postgresql-simple >=0.5 && <0.7,
                       containers >=0.5 && <0.7,
                       dlist >=0.7 && <0.9,
                       regex-compat >= 0.95,
                       attoparsec,
                       filepath >= 1.4,
                       optparse-applicative >= 0.12,
                       bytestring,
                       lzma,
                       transformers >=0.5 && <0.6
  hs-source-dirs:      ., nofib/nofib-analyse
  default-language:    Haskell2010

executable perf-import-git
  main-is:             ImportGit.hs
  other-modules:       Types
  default-language:    Haskell2010
  build-depends:       base,
                       bytestring,
                       postgresql-simple,
                       containers,
                       time >= 1.6,
                       optparse-applicative >= 0.12,
                       process >= 1.4

executable perf-import-notes
  main-is:             ImportNotes.hs
  other-modules:       Types, Utils
  default-language:    Haskell2010
  build-depends:       base,
                       bytestring,
                       postgresql-simple,
                       containers,
                       text,
                       optparse-applicative >= 0.12,
                       process >= 1.4

executable perf-import-head-hackage
  main-is:             ImportHeadHackage.hs
  other-modules:       Types, Utils, MRX
  default-language:    Haskell2010
  build-depends:       base,
                       bytestring,
                       filepath,
                       postgresql-simple,
                       containers,
                       text,
                       lens,
                       lens-regex-pcre,
                       pcre-light,
                       template-haskell,
                       optparse-applicative >= 0.12,
                       process >= 1.4
