name:                perf-import
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2016 Ben Gamari
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     GhcPerf.Import.HeadHackage
                       GhcPerf.Import.Notes
                       GhcPerf.Import.Types
                       GhcPerf.Import.Utils
  other-modules:       GhcPerf.Import.HeadHackage.MRX
  hs-source-dirs:      src
  build-depends:       base,
                       bytestring,
                       postgresql-simple,
                       containers,
                       text,
                       filepath,
                       lens,
                       lens-regex-pcre,
                       pcre-light,
                       template-haskell,
                       process,
                       time >= 1.6

executable perf-import-nofib
  main-is:             ImportNofib.hs
  other-extensions:    QuasiQuotes, RecordWildCards
  build-depends:       base >=4.8 && <4.16,
                       postgresql-simple >=0.5 && <0.7,
                       containers >=0.5 && <0.7,
                       dlist >=0.7 && <0.9,
                       regex-compat >= 0.95,
                       attoparsec,
                       filepath >= 1.4,
                       optparse-applicative >= 0.12,
                       cassava,
                       bytestring,
                       lzma,
                       transformers >=0.5 && <0.6,
                       perf-import
  hs-source-dirs:      .
  default-language:    Haskell2010

executable perf-import-git
  main-is:             ImportGit.hs
  default-language:    Haskell2010
  build-depends:       base,
                       bytestring,
                       postgresql-simple,
                       containers,
                       time >= 1.6,
                       optparse-applicative >= 0.12,
                       process >= 1.4,
                       perf-import

executable perf-import-notes
  main-is:             ImportNotes.hs
  default-language:    Haskell2010
  build-depends:       base,
                       bytestring,
                       postgresql-simple,
                       containers,
                       text,
                       optparse-applicative >= 0.12,
                       process >= 1.4,
                       perf-import

executable perf-import-head-hackage
  main-is:             ImportHeadHackage.hs
  default-language:    Haskell2010
  build-depends:       base,
                       bytestring,
                       filepath,
                       postgresql-simple,
                       containers,
                       text,
                       optparse-applicative >= 0.12,
                       perf-import


executable perf-import-gitlab-hook
  main-is:             HookMain.hs
  other-modules:       GitLabHook
  default-language:    Haskell2010
  build-depends:       base,
                       bytestring,
                       filepath,
                       postgresql-simple,
                       containers,
                       text,
                       template-haskell,
                       optparse-applicative >= 0.12,
                       process >= 1.4,
                       servant,
                       servant-server,
                       aeson,
                       wai,
                       warp,
                       perf-import
