name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  other-modules:       Db
  build-depends:       base, ghcjs-base, containers, miso, aeson, lens, transformers
  ghc-optinos:         -Wall
  default-language:    Haskell2010
